# ramiro-llm-zoomcamp

./: .gitignore  Untitled.ipynb
first_version/: .env.example  Search_more_modular.ipynb  Untitled.ipynb  generating-answers-2.ipynb  main.py  pyproject.toml  rag-intro.ipynb  rag_framework.excalidraw  seach-intro-1.ipynb  update_parse.py
